style.css
html {
    scroll-behavior: smooth; 
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    min-height: 100vh;
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.5;
    color: #66377c;
}
h1{
    font-size: 54px;
    border-bottom: 2px solid #4d2323 ;
}
h2{
    font-size: 36px;
}

h3{
    font-size: 24px;
    border-bottom: 2px solid #4d2323 ;
}
.header{
    border: 1px solid red; 
}
.main{
    border: 1px solid red;
}
.footer{
    border: 1px solid red;   
    display: flex;
}
.container {
    max-width: 1440px;
    margin: 0 auto;
}
.main-container {
    display: flex;
    flex-wrap: wrap;
}
.section {
    padding: 10px;
   
    /*border: 1px solid red;*/ 
    border-radius: 10px;  
    width: 50%;

}
@media (max-width: 768px) {
    .section {
      width: 100%;
    }
  }
.nav-list {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    list-style: none;
}
.nav-link {
    padding: 0 20px;
    line-height: 50px;
    text-decoration: none;
    transition: .3s;
}
.nav-item:hover{
    background: #cb8fe7;
    transition: all 300ms;
}
.section-item a {
    color: #829985;
    text-decoration: none;  
    transition: color 0.5s;
}
.section-item a:hover {
    color: #4d2323;
}
.section-list{
    list-style: none;
}
.code{
    display: block;
    font-family: monospace;
    background: #9163ac;
    color: #ffffff;
    white-space: pre-line;
}
.photo{
    display: block;
    width: 250px;
    height: 250px;
    border-radius: 50%;
    box-shadow: 0 5px 10px rgb(0 0 0 / 60%);
}
.name{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    text-align: center;
    
}
#profile{
    display: flex;
    flex-wrap: wrap;
    width: 100%;
    justify-content: space-around;
    padding: 20px;
}

/* Не забыть cursor: pointer для всего кроме ссылок, что интерактивно */

.rss-footer{
    width: 100px;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}
.rss-logo{
  width: 100px;  
}
.rss-link{
    display: block;
}
.social-logo{
    width: 40px;
    height: 40px;
    margin: 15px;
}
.social-list {
    display: flex;
    justify-content: center;
    align-items: center;
    list-style: none;
}
.credits{
    margin-left: auto;
    margin-right: auto;
    text-align: center;
}

